--- a/Main code/Reservation_System/Reservation_System.vcxproj.filters
+++ b/Main code/Reservation_System/Reservation_System.vcxproj.filters
@@ -30,7 +30,10 @@
     <ClCompile Include="Login.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EnterManagerMenu.cpp">
+    <ClCompile Include="EnterMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Read_Reservation_Info.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,7 +56,13 @@
     <ClInclude Include="Login.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EnterManagerMenu.h">
+    <ClInclude Include="EnterMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OfficeRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Read_Reservation_Info.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
